--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="icon" href="/assets/logos/android-chrome-512x512.png" sizes="512x512" type="image/png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Default title - will be overridden by SEOHead component -->
-    <title>Millstone India - The Foundation of Your Finish</title>
-    <meta name="description" content="Expert industrial craftsmen providing superior abrasives, minerals, machinery, and technical expertise. Government Recognized Export House serving 20+ countries with ISO 9001:2015 certified excellence." />
-    <meta name="keywords" content="Millstone India, Industrial Abrasives, Silicon Carbide, Flour Mill Machinery, Industrial Minerals, ISO 9001:2015, Export House, Jodhpur" />
-    <meta name="author" content="Millstone India - A Unit of Sharad Enterprises" />
+    <title>Vedic Wisdom Series - Ancient Sound, Modern Awakening</title>
+    <meta name="description" content="Revolutionary Vedic education bridging quantum physics with ancient wisdom. Learn from Dr. Nischaya Nagori through Weekend Discourses, Chanting Classes, Teacher Training, and Lifestyle Experiences." />
+    <meta name="keywords" content="Vedic Wisdom Series, Dr. Nischaya Nagori, Vedic Education, Sanskrit Chanting, Spiritual Discourses, Teacher Training, Ancient Wisdom, Quantum Spirituality" />
+    <meta name="author" content="Vedic Wisdom Series - Dr. Nischaya Nagori" />
     
-    <!-- Industrial Typography System - Google Fonts -->
+    <!-- Spiritual Typography System - Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
